<resources>
    <string name="app_name">MyTextView</string>
    <string name="input_content">请输入文本内容: </string>
    <string name="set_content">修改文本</string>

    <string name="txt_a">文本透明度: 100</string>
    <string name="txt_r">文本红: </string>
    <string name="txt_g">文本绿: </string>
    <string name="txt_b">文本蓝: </string>
    <string name="txt_size">文本字号: </string>
    <string name="bk_a">背景透明度: 100</string>
    <string name="bk_r">背景红: </string>
    <string name="bk_g">背景绿: </string>
    <string name="bk_b">背景蓝: </string>

    <string name="txt_size_n">文本字号: %1$d</string>

    <string name="bk_a_n">背景透明度: %1$d</string>
    <string name="bk_r_n">背景红: %1$d</string>
    <string name="bk_g_n">背景绿: %1$d</string>
    <string name="bk_b_n">背景蓝: %1$d</string>

    <string name="txt_a_n">文本透明度: %1$d</string>
    <string name="txt_r_n">文本红: %1$d</string>
    <string name="txt_g_n">文本绿: %1$d</string>
    <string name="txt_b_n">文本蓝: %1$d</string>
</resources>
