<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/eight_dp"
    tools:context="com.so.mytextview.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <EditText
            android:id="@+id/et_content"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eight_dp"
            android:layout_weight="1"
            android:hint="@string/input_content" />

        <Button
            android:id="@+id/bt_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setContent"
            android:text="@string/set_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_txt_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/txt_a" />

        <SeekBar
            android:id="@+id/sb_txt_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_txt_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/txt_r" />

        <SeekBar
            android:id="@+id/sb_txt_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_txt_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/txt_g" />

        <SeekBar
            android:id="@+id/sb_txt_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_txt_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/txt_b" />

        <SeekBar
            android:id="@+id/sb_txt_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_txt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/txt_size" />

        <SeekBar
            android:id="@+id/sb_txt_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_bk_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/bk_a" />

        <SeekBar
            android:id="@+id/sb_bk_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_bk_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/bk_r" />

        <SeekBar
            android:id="@+id/sb_bk_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/eight_dp">

        <TextView
            android:id="@+id/tv_bk_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/bk_g" />

        <SeekBar
            android:id="@+id/sb_bk_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bk_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/eight_dp"
            android:text="@string/bk_b" />

        <SeekBar
            android:id="@+id/sb_bk_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.so.mytextview.ui.view.MyTextView
            android:id="@+id/mtv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:color="@color/colorAccent"
            app:size="60sp"
            app:text="hello world" />
    </RelativeLayout>

</LinearLayout>
